fix: update checkout links with correct product codenames and fix z-index on cards

--- a/thememomatrix.com/vsl2/css/leanzeneg-pv.webflow.css
+++ b/thememomatrix.com/vsl2/css/leanzeneg-pv.webflow.css
@@ -541,6 +541,8 @@ a {
   width: 100%;
   text-decoration: none;
   display: flex;
+  position: relative;
+  z-index: 2;
 }
 
 .potes-holder-div.potes-6 {
